--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,14 +1,14 @@
 blank_issues_enabled: false
 contact_links:
   - name: Bug Report (Framework)
-    url: https://github.com/hypervel/components/issues
+    url: https://github.com/ugunNet21/hypervel-web-school/issues
     about: "Report something that's broken in the framework."
   - name: Feature Request
-    url: https://github.com/hypervel/components/discussions
+    url: https://github.com/ugunNet21/hypervel-web-school/discussions
     about: 'For ideas or feature requests, start a new discussion.'
   - name: Support Questions & Others
-    url: https://github.com/hypervel/components/discussions
+    url: https://github.com/ugunNet21/hypervel-web-school/discussions
     about: 'This repository is only for reporting bugs. If you have a question or need help using the library, click:'
   - name: Documentation Issues
-    url: https://github.com/hypervel/hypervel.org
-    about: For documentation issues, open a pull request at the hypervel.org repository.
+    url: https://github.com/ugunNet21/hypervel-web-school
+    about: For documentation issues, open a pull request at this repository.
