--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "hyperf/testing": "~3.1.0",
         "hyperf/watcher": "~3.1.0",
         "hypervel/devtool": "^0.1",
+        "laravel/envoy": "^2.10",
         "mockery/mockery": "^1.5.1",
         "nunomaduro/collision": "^8.5",
         "phpstan/phpstan": "^1.11.5",
@@ -69,7 +70,10 @@
     },
     "config": {
         "optimize-autoloader": true,
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "wikimedia/composer-merge-plugin": true
+        }
     },
     "extra": {
         "hypervel": {
