--- a/web-sch-12/.env.example
+++ b/web-sch-12/.env.example
@@ -27,6 +27,23 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+# configuration for mysql
+# DB_CONNECTION=mysql
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_DATABASE=hypervel
+# DB_USERNAME=hypervel
+# DB_PASSWORD=secret
+
+# configuration for pgsql
+# DB_CONNECTION=pgsql
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_DATABASE=hypervel
+# DB_USERNAME=hypervel
+# DB_PASSWORD=secret
+
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
