--- a/web-sch-12/composer.json
+++ b/web-sch-12/composer.json
@@ -14,7 +14,9 @@
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
         "nwidart/laravel-modules": "^12.0",
-        "spatie/laravel-permission": "^6.17"
+        "spatie/laravel-permission": "^6.17",
+        "yajra/laravel-datatables": "^12.0",
+        "yajra/laravel-datatables-oracle": "^12.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
